<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_faceliviness_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/face_liviness_set"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x60"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/rb_no_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_live"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_faceliviness_title" />

    <TextView
        android:id="@+id/tv_no_live"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x50"
        android:text="@string/no_live_desp"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rb_no_live"
        app:layout_constraintTop_toBottomOf="@+id/rb_no_live"
        app:layout_constraintVertical_bias="0.03" />

    <RadioButton
        android:id="@+id/rb_rgb_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rgb_live"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_live"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tv_rgb_live"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x50"
        android:text="@string/rgb_live_desp"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rb_rgb_live"
        app:layout_constraintTop_toBottomOf="@+id/rb_rgb_live"
        app:layout_constraintVertical_bias="0.03" />

    <RadioButton
        android:id="@+id/rb_rgbandnir_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rgbandnir_live"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rgb_live"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tv_rgbandnir_live"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x50"
        android:text="@string/rgbandnir_live_desp"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rb_rgbandnir_live"
        app:layout_constraintTop_toBottomOf="@+id/rb_rgbandnir_live"
        app:layout_constraintVertical_bias="0.03" />

    <RadioButton
        android:id="@+id/rb_rgbanddepth_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rgbanddepth"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rgbandnir_live"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tv_rgbanddepth_live"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x50"
        android:text="@string/rgbanddepth_desp"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rb_rgbanddepth_live"
        app:layout_constraintTop_toBottomOf="@+id/rb_rgbanddepth_live"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/btn_faceliviness_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/save"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>
