<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_mirrir_setting_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/mirror_setting"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x60"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mirrir_setting_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x60"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mirrir_setting_title"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tv_mirrir_setting_description_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x50"
        android:text="@string/mirror_tips"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_mirrir_setting_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_mirrir_setting_description"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tv_mirrir_setting_description_rgb_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbg_mirror"
        android:textColor="@color/c_black"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_mirrir_setting_description_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_mirrir_setting_description_value"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tv_mirrir_setting_rgb_decrease"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x50"
        android:gravity="center"
        android:text="@string/no_mirror"
        android:textColor="@color/c_black"
        app:layout_constraintEnd_toStartOf="@+id/sw_mirrir_setting_rgb"
        app:layout_constraintTop_toTopOf="@+id/sw_mirrir_setting_rgb"/>

    <Switch
        android:id="@+id/sw_mirrir_setting_rgb"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mirrir_setting_description_rgb_set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <TextView
        android:id="@+id/tv_mirrir_setting_rgb_increase"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x50"
        android:gravity="center"
        android:text="@string/mirror"
        android:textColor="@color/c_black"
        app:layout_constraintStart_toEndOf="@+id/sw_mirrir_setting_rgb"
        app:layout_constraintTop_toTopOf="@+id/sw_mirrir_setting_rgb" />

    <TextView
        android:id="@+id/tv_mirrir_setting_description_nir_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nir_mirror"
        android:textColor="@color/black"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_mirrir_setting_description_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_mirrir_setting_rgb_decrease"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tv_mirrir_setting_nir_decrease"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x50"
        android:gravity="center"
        android:text="@string/no_mirror"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/sw_mirrir_setting_nir"
        app:layout_constraintTop_toTopOf="@+id/sw_mirrir_setting_nir"/>

    <Switch
        android:id="@+id/sw_mirrir_setting_nir"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mirrir_setting_description_nir_set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.08"/>

    <TextView
        android:id="@+id/tv_mirrir_setting_nir_increase"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x50"
        android:gravity="center"
        android:text="@string/mirror"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/sw_mirrir_setting_nir"
        app:layout_constraintTop_toTopOf="@+id/sw_mirrir_setting_nir" />

    <Button
        android:id="@+id/btn_mirrir_setting_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="@dimen/x40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>