<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_gate_set_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_gate_set_ip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/IP"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.1"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_gate_set_ip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/tv_gate_set_ip"
        app:layout_constraintLeft_toRightOf="@+id/tv_gate_set_ip"
        app:layout_constraintBottom_toBottomOf="@+id/tv_gate_set_ip"
        app:layout_constraintWidth_percent="0.7"/>

    <TextView
        android:id="@+id/tv_gate_set_port"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/port"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.1"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_gate_set_port"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/tv_gate_set_port"
        app:layout_constraintLeft_toRightOf="@+id/tv_gate_set_port"
        app:layout_constraintBottom_toBottomOf="@+id/tv_gate_set_port"
        app:layout_constraintWidth_percent="0.7"/>

    <EditText
        android:id="@+id/et_gate_set_change_ip"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.71"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintHorizontal_bias="0.1"
         />

    <Button
        android:id="@+id/btn_gate_set_change"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/et_gate_set_change_ip"
        app:layout_constraintLeft_toRightOf="@+id/et_gate_set_change_ip"
        app:layout_constraintBottom_toBottomOf="@+id/et_gate_set_change_ip"
        app:layout_constraintWidth_percent="0.2"
        android:text="@string/change_ip"/>

    <TextView
        android:id="@+id/tv_gate_set_change"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <CheckBox
        android:id="@+id/rb_gate_set_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_set"
        android:textSize="@dimen/x36"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_gate_set_confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/reconnect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.8"/>

    <TextView
        android:id="@+id/tv_gate_set_status"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:gravity="center" />
</androidx.constraintlayout.widget.ConstraintLayout>
