<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/logindialogbg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_pswd"
        android:textStyle="bold"
        android:textSize="@dimen/x40"
        android:layout_marginTop="@dimen/x30"
        android:textColor="@color/blue"
        android:gravity="center"
        />

    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x500"
        android:layout_below="@+id/tv_title">

        <EditText
            android:id="@+id/et_login_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="点确定就可以了" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_name"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--取消按钮-->
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/x150"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/confirm"
            android:textColor="@color/blue"
            android:textSize="18sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <!--退出按钮-->
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/x150"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>


